--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,12 +1,13 @@
-pip==8.1.2
-bumpversion==0.5.3
-wheel==0.29.0
-watchdog==0.8.3
-flake8==2.6.0
-tox==2.3.1
-coverage==4.1
-Sphinx==1.4.8
-cryptography==1.7
-PyYAML==5.1
-pytest==2.9.2
-pytest-runner==2.11.1
+mock==3.0.5
+nose==1.3.7
+parameterizedtestcase==0.1.0
+pluggy==0.13.1
+plumbum==1.6.8
+py==1.8.1
+pymongo==3.10.1
+pyparsing==2.4.6
+pytest==5.3.2
+PyYAML==5.3
+six==1.13.0
+wcwidth==0.1.8
+zipp==1.0.0
